- Bugfix (ID: 3431174): Within the "PLCore::System"-constructor, the main thread was created incorrectly
- Bugfix (ID: 3433006): The return value of "PLCore::FileObject::GenericMove()" and "FileObject::PLCore::GenericCopy()" was always "false"
- Bugfix (ID: 3433854): The Autodesk 3ds Max scene exporter options "PL directories" and "Subdirectories" did not work correctly


Changes in PixelLight 0.9.9-R1 (released on October 23, 2011)
- Feature: Added Android support (>=2.3, Gingerbread, android-9 API level)
- Feature: "PLRendererOpenGLES2" now also supports desktop PC GPU drivers capable of native OpenGL ES 2.0 instead of just an emulator when developing on a desktop PC
- Feature: "PLRendererOpenGLES2" now supports the following extensions: GL_EXT_texture_compression_s3tc, GL_EXT_texture_compression_dxt1, GL_EXT_texture_compression_latc,
           GL_EXT_texture_filter_anisotropic, GL_EXT_Cg_shader, GL_AMD_compressed_3DC_texture, GL_NV_get_tex_image, GL_OES_mapbuffer, GL_OES_element_index_uint, GL_OES_texture_3D,
           GL_ARB_draw_buffers, GL_NV_fbo_color_attachments, GL_NV_read_buffer, GL_ANGLE_framebuffer_blit, GL_ANGLE_framebuffer_multisample, GL_OES_packed_depth_stencil,
           GL_OES_depth24 and GL_OES_depth32
- Feature: The plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" is now also able to load in complete scenes (without merging everything into one huge mesh)
- Feature: Added string encoding format option to "PLCore::File::Open()" in order to support read and write of Unicode text files
- Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
- Change (Windows): "PLFrontendQt" includes simplification: "Include\Qt" instead of "Include\Qt\Qt"
- Change: When developing with PixelLight, the registry key (or environment variable) is now only used as fallback in case PLCore is used statically, so, usually you no longer need this registry key
- Change: Layout changes within the LaTex documents