@@ -6,6 +6,7 @@ Changes in PixelLight 0.9.10-R1 (not yet released)
 - Bugfix (ID: 3431174): Within the "PLCore::System"-constructor, the main thread was created incorrectly
 - Bugfix (ID: 3433006): The return value of "PLCore::FileObject::GenericMove()" and "FileObject::PLCore::GenericCopy()" was always "false"
 - Bugfix (ID: 3433854): The Autodesk 3ds Max scene exporter options "PL directories" and "Subdirectories" did not work correctly
+- Bugfix (ID: 3442054): "PLCore::Connection::Receive()" called "PLCore::Connection::OnReceive()" with the fixed buffer size, instead of with the number of received bytes
 
 
 Changes in PixelLight 0.9.9-R1 (released on October 23, 2011)
